Bump hardware decoding limits to 4k.

Devices like the S6+ can decode 4k content. If a device fails to
configure we'll just fallback to software anyways.

BUG=610892
TEST=samsung s6 plays hardware vp8/vp9

Review-Url: https://codereview.chromium.org/1963413002
Cr-Commit-Position: refs/heads/master@{#392805}

Former-commit-id: 1e699bc922e00aec59d2aba8e62dbe88e615f011